The text of login with opt was overflowing has been fixed

--- a/sass/styles/applications/account/components/login.scss
+++ b/sass/styles/applications/account/components/login.scss
@@ -23,4 +23,7 @@
     padding: 30px 30px;
     width: 90%;
   }
+  .c-login .button-solid {
+    padding: 8px 10px;
+  }
 }
